Feature/pre milestone 05 refactor user (#7)
* Initial changes

* More changes

* Fix all tests

* update docs

* more update docs
